// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CreateIem/>  Creates and Item when the form is submitted  1`] = `
<fieldset
  aria-busy={false}
  disabled={false}
>
  <label
    htmlFor="file"
  >
    Image
    <input
      id="file"
      name="file"
      onChange={[Function]}
      placeholder="Upload an image"
      required={true}
      type="file"
    />
  </label>
  <label
    htmlFor="title"
  >
    Title
    <input
      id="title"
      name="title"
      onChange={[Function]}
      placeholder="Title"
      required={true}
      type="text"
      value="Testing"
    />
  </label>
  <label
    htmlFor="price"
  >
    Price
    <input
      id="price"
      name="price"
      onChange={[Function]}
      placeholder="Price"
      required={true}
      type="number"
      value={50000}
    />
  </label>
  <label
    htmlFor="description"
  >
    Description
    <textarea
      id="description"
      name="description"
      onChange={[Function]}
      placeholder="Enter A Description"
      required={true}
      value="This is an Item"
    />
  </label>
  <button
    type="submit"
  >
    Submit
  </button>
</fieldset>
`;

exports[`<CreateIem/>  Renders and matches snapshot  1`] = `
<form
  className="Form-sc-17mrryo-0 kCLdEE"
  data-test="form"
  onSubmit={[Function]}
>
  <DisplayError
    error={Object {}}
  />
  <fieldset
    aria-busy={false}
    disabled={false}
  >
    <label
      htmlFor="file"
    >
      Image
      <input
        id="file"
        name="file"
        onChange={[Function]}
        placeholder="Upload an image"
        required={true}
        type="file"
      />
    </label>
    <label
      htmlFor="title"
    >
      Title
      <input
        id="title"
        name="title"
        onChange={[Function]}
        placeholder="Title"
        required={true}
        type="text"
        value=""
      />
    </label>
    <label
      htmlFor="price"
    >
      Price
      <input
        id="price"
        name="price"
        onChange={[Function]}
        placeholder="Price"
        required={true}
        type="number"
        value={0}
      />
    </label>
    <label
      htmlFor="description"
    >
      Description
      <textarea
        id="description"
        name="description"
        onChange={[Function]}
        placeholder="Enter A Description"
        required={true}
        value=""
      />
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </fieldset>
</form>
`;
